[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-py-client-bulk"
version = "0.0.1" 
description = "The sample demonstrates ctrlX Data Layer bulk operations."
authors = [
    { name = "Bosch Rexroth AG", email = "github@boschrexroth.com" },
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "ctrlx-datalayer<=3.6",
    "ctrlx-fbs",
    "cysystemd"
]

[project.scripts]
app-main = "app.main:main"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["app", "app.helper"]



