[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-py-provider-sub"
version = "0.0.1" 
description = "This sample shows how a provider supports ctrlX Data Layer subscription interface"
authors = [
    { name = "Bosch Rexroth AG", email = "github@boschrexroth.com" },
]
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "ctrlx-datalayer<=3.6",
    "ctrlx-fbs"
]

[project.scripts]
app-client = "app.client:main"
app-provider = "app.provider:main"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
packages = ["app", "app.helper", "app.datalayerclient", "app.datalayerprovider"]
include-package-data = true

[tool.setuptools.package-data]
bfbs = ["sampleSchema.bfbs"]


